# downscale-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/downscale-cli/: Cargo.toml
crates/downscale-cli/src/: main.rs  series.rs
crates/downscale-core/: Cargo.toml
crates/downscale-core/benches/: bias_correction.rs
crates/downscale-core/examples/: quinta_normal_downscaling.rs
crates/downscale-core/src/: analog.rs  delta.rs  error.rs  forcing.rs  grid.rs  lib.rs  mbcn.rs  metrics.rs  multivariate.rs  parametric.rs  pet.rs  qdm.rs  qm.rs  regression.rs  special.rs  validation.rs  wetday.rs
crates/downscale-core/tests/: end_to_end.rs  properties.rs
crates/downscale-python/: Cargo.toml  pyproject.toml
crates/downscale-python/src/: lib.rs
crates/downscale-python/tests/: test_downscale.py
crates/downscale-wasm/: Cargo.toml  README.md
crates/downscale-wasm/src/: lib.rs
crates/downscale-wasm/www/: index.html
docs/: basins.md  forcing-interface.md  gcm-validation.md  grid.md  multistation.md  multivariate.md  parity.md  performance.md  predictors.md
scripts/: benchmark_vs_python.py  experiment_basins.py  experiment_gcm.py  experiment_gcm_raw.py  experiment_grid.py  experiment_mbcn.py  experiment_multistation.py  experiment_predictors.py  fetch_gcm.py  fetch_gcm_raw.py  fetch_synoptic_predictors.py  parity_parametric.py  parity_quinta_normal.py
site/: index.html
