[workspace]
resolver = "3"
members = ["crates/downscale-core", "crates/downscale-cli", "crates/downscale-python"]

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/franciscoparrao/downscale-rs"
authors = ["Francisco Parra-O."]

[profile.release]
lto = true
codegen-units = 1
